mds: preserve ESlaveUpdate::OP_PREPARE logevent before doing commit

Fixes: https://tracker.ceph.com/issues/45024
Signed-off-by: songxinying <songxinying@sensetime.com>